fix: add support for //set hand